// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/MegaButton AsLink smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <a class="MegaButton_button__1aSH0 "
     href="https://www.skatteetaten.no"
     role="button"
  >
    Klikk her
  </a>
</div>
`;

exports[`Tester/MegaButton AsLinkEmptyString smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <a class="MegaButton_button__1aSH0 "
     href
  >
    Klikk her
  </a>
</div>
`;

exports[`Tester/MegaButton AsLinkExternal play-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <a class="MegaButton_button__1aSH0 "
     href="https://www.skatteetaten.no"
     role="button"
  >
    Klikk her
    <svg class="Icon_systemIcon__3UiY7 Icon_systemIcon_medium__3Bf05 MegaButton_icon__3cuzU"
         viewbox="0 0 24 24"
         focusable="false"
         aria-label="Til et annet nettsted"
         aria-hidden="false"
         role="img"
    >
      <path d="M14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7Zm5 16H5V5h7V3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7h-2v7Z">
      </path>
    </svg>
  </a>
</div>
`;

exports[`Tester/MegaButton Defaults play-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="MegaButton_button__1aSH0 "
          type="button"
  >
    Klikk her
  </button>
</div>
`;

exports[`Tester/MegaButton Disabled play-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="MegaButton_button__1aSH0 "
          disabled
          type="button"
  >
    Klikk her
  </button>
</div>
`;

exports[`Tester/MegaButton WithAccesskey play-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="MegaButton_button__1aSH0 "
          accesskey="j"
          type="button"
  >
    Klikk her
  </button>
</div>
`;

exports[`Tester/MegaButton WithAriaDescribedby play-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="MegaButton_button__1aSH0 "
          type="button"
          aria-describedby="testid1234"
  >
    Klikk her
  </button>
</div>
`;

exports[`Tester/MegaButton WithCustomCss play-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="MegaButton_button__1aSH0 dummyClassname"
          type="button"
  >
    Klikk her
  </button>
</div>
`;

exports[`Tester/MegaButton WithDataTestid play-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="MegaButton_button__1aSH0 "
          data-testid="123Mega"
          type="button"
  >
    Klikk her
  </button>
</div>
`;

exports[`Tester/MegaButton WithEventHandlers play-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="MegaButton_button__1aSH0 "
          type="button"
  >
    Knapp har blitt klikket på
  </button>
</div>
`;

exports[`Tester/MegaButton WithExternalIcon play-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="MegaButton_button__1aSH0 "
          type="button"
  >
    Klikk her
    <svg class="Icon_systemIcon__3UiY7 Icon_systemIcon_medium__3Bf05 MegaButton_icon__3cuzU"
         viewbox="0 0 24 24"
         focusable="false"
         aria-label="Til et annet nettsted"
         aria-hidden="false"
         role="img"
    >
      <path d="M14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7Zm5 16H5V5h7V3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7h-2v7Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/MegaButton WithId play-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button id="htmlid"
          class="MegaButton_button__1aSH0 "
          type="button"
  >
    Klikk her
  </button>
</div>
`;

exports[`Tester/MegaButton WithLang play-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="MegaButton_button__1aSH0 "
          lang="nb"
          type="button"
  >
    Klikk her
  </button>
</div>
`;

exports[`Tester/MegaButton WithLongText smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="MegaButton_button__1aSH0 "
          type="button"
  >
    Denne knappen har en veldig lang tekst. Så lang at den må brekke.
  </button>
</div>
`;

exports[`Tester/MegaButton WithLongTextAndExternalIcon smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="MegaButton_button__1aSH0 "
          type="button"
  >
    Denne knappen har en veldig lang tekst. Icon skal da plasseres løpende etter tekster på siste linje
    <svg class="Icon_systemIcon__3UiY7 Icon_systemIcon_medium__3Bf05 MegaButton_icon__3cuzU"
         viewbox="0 0 24 24"
         focusable="false"
         aria-label="Til et annet nettsted"
         aria-hidden="false"
         role="img"
    >
      <path d="M14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7Zm5 16H5V5h7V3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7h-2v7Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/MegaButton WithLongTextBreaking smoke-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="MegaButton_button__1aSH0 "
          type="button"
  >
    Denneknappenharenveldiglangtekst.Sålangatdenmåbrekke.
  </button>
</div>
`;

exports[`Tester/MegaButton WithRef play-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="MegaButton_button__1aSH0 "
          type="button"
          id="dummyIdForwardedFromRef"
  >
    Klikk her
  </button>
</div>
`;

exports[`Tester/MegaButton WithType play-test 1`] = `
<div class="noTransition"
     data-test-block="true"
>
  <button class="MegaButton_button__1aSH0 "
          type="submit"
  >
    Klikk her
  </button>
</div>
`;
